Closed Bug 128449 Opened 24 years ago Closed 24 years ago

[FIX]Context menus can cause crash when in PrintPreview

Categories

(Core :: Print Preview, defect)

x86
Windows 2000
defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: rods, Assigned: rods)

References

Details

(Keywords: crash, Whiteboard: [adt3] per adt triage)

Attachments

(1 file, 1 obsolete file)

Status: NEW → ASSIGNED
Keywords: crash, nsbeta1
Target Milestone: --- → mozilla1.0
Attached patch patch (k drive) (obsolete) — Splinter Review
This creates a small ContextMenuListener object and uses it to "prevent" the events from being processed by the DOM for the PP document. The listener is added and removed when only PP.
Summary: Context menus can cause crash when in PrintPreview → [FIX]Context menus can cause crash when in PrintPreview
Keywords: nsbeta1nsbeta1+
Comment on attachment 72052 [details] [diff] [review] patch (k drive) r=dcone
Attachment #72052 - Flags: review+
Keywords: review
Attachment #72052 - Attachment is obsolete: true
Comment on attachment 72052 [details] [diff] [review] patch (k drive) A new patch is coming that registers and prevents more than just context menu events.
Attached patch patchSplinter Review
Add event listeners to "prevent" ContextMenu, Key, Mouse and MouseMotion events from being processed.
*** Bug 128254 has been marked as a duplicate of this bug. ***
Comment on attachment 72778 [details] [diff] [review] patch This bug now depends on Bug 124990. We are listening and properly canceling (preventing) the mouse events, but the order of the ergistered listeners is causing us problems. Bug 124990 will let us register the PP listener before the listeners that are registered by the form controls.
Attachment #72778 - Attachment is obsolete: true
Depends on: 124990
Keywords: review
Comment on attachment 72778 [details] [diff] [review] patch In InstallPrintPreviewListener You cannot assert that a 'new' wil succeed: NS_ASSERTION(mPrt->mPPEventListeners, "Error getting nsPrintPreviewListener"); You have no control over when memory is available or not, so handle the error case and drop the assert. Also, I do not think you can assert that mPrt->mPPEventListeners->AddListeners() will always succeed. Again, handle the error or make sure it cannot happen (and get rid of or ignore the result). Otherwise, sr=attinasi
Attachment #72778 - Attachment is obsolete: false
Attachment #72778 - Flags: superreview+
Blocks: 129002
Summary: [FIX]Context menus can cause crash when in PrintPreview → [FIX][DEP]Context menus can cause crash when in PrintPreview
Summary: [FIX][DEP]Context menus can cause crash when in PrintPreview → [PARTIAL-FIX][DEP]Context menus can cause crash when in PrintPreview
Whiteboard: [adt3] per adt triage
Comment on attachment 72778 [details] [diff] [review] patch Marc's changes and you have my r. r=dcone
Attachment #72778 - Flags: review+
Changes have been made ready for check in.
Summary: [PARTIAL-FIX][DEP]Context menus can cause crash when in PrintPreview → [FIX]Context menus can cause crash when in PrintPreview
Comment on attachment 72778 [details] [diff] [review] patch a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #72778 - Flags: approval+
fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified in 3/25 build.
Status: RESOLVED → VERIFIED
If you still see the problem on Linux with Comboboxes please dup or look at Bug 133478. This checkin was the more generic case for many of the problems. The more specific case of the combobox is covered under the new bug and is the part of the check in that depends on joki's fix for Bug 124990
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: