Add event listeners to "prevent" ContextMenu, Key, Mouse and MouseMotion events from being processed. Bug 128449 r=dcone sr=attinasi a=asa